--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+	<div id="a" class="item">1</div>
+	<div id="b" class="item">2</div>
+	<div id="c" class="item">3</div>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
